--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
@@ -2,6 +2,7 @@ page {
   height: 100%;
   /* overflow: hidden; */
 }
+
 .investImg {
   width: 100%;
   height: 327.6rpx;
@@ -10,9 +11,11 @@ page {
   left: 0;
   z-index: 999; */
 }
-.investImg image{
+
+.investImg image {
   width: 100%;
 }
+
 .media {
   width: 100%;
   height: auto;
@@ -30,8 +33,6 @@ page {
   border-bottom: 1px solid #e6e6e6;
 }
 
-
-
 .investLogo {
   width: 20%;
 }
@@ -40,7 +41,8 @@ page {
   width: 121.68rpx;
   height: 121.68rpx;
 }
-.investLogo1 image{
+
+.investLogo1 image {
   width: 100%;
 }
 
@@ -91,7 +93,7 @@ page {
 .investIndury {
   font-size: 12px;
   color: #666;
-  height:auto;
+  height: auto;
   line-height: 38rpx;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
@@ -101,31 +103,35 @@ page {
   -webkit-box-orient: vertical;
   margin-bottom: 24rpx;
 }
-.investInduryone{
-  display: inline-block
+
+.investInduryone {
+  display: inline-block;
 }
-.investOther{
-  font-size:12px;
-color:#666666;
+
+.investOther {
+  font-size: 12px;
+  color: #666;
 }
-.investLeft{
+
+.investLeft {
   margin-right: 20rpx;
-  display: inline-block
+  display: inline-block;
 }
-.investDetail{
+
+.investDetail {
   padding: 18rpx;
   margin-top: 20rpx;
-  font-size:12px;
-  color:#40587a;
+  font-size: 12px;
+  color: #40587a;
   height: auto;
   /* max-height:75rpx;  */
   line-height: 46rpx;
-   overflow: hidden;
+  overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 30rpx;
- background:#fafafa;
+  background: #fafafa;
 }
