--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -56,89 +56,91 @@
         <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true&& textBeyond5}}" data-check="{{0}}">全部</label>
         <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false&& textBeyond5}}" data-check="{{0}}" >收起</label>
       </view> -->
-       <!--项目亮点-->
-            <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
-              <view class="brightPointBox flex">
-                <image src="/img/img-star.png" class="titlePic"></image>
-                <view class="title star">项目亮点</view>
+      <!--项目亮点-->
+      <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
+        <view class="brightPointBox flex">
+          <image src="/img/img-star.png" class="titlePic"></image>
+          <view class="title star">项目亮点</view>
+        </view>
+        <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
+          <block wx:for="{{project.pro_goodness}}" wx:for-item="goodness" wx:key="{{index}}">
+            <view class="goodTitle1">
+              <view class="goodTitle">【{{goodness.goodness_title}}】</view>
+              <view class="brightContent">
+                {{goodness.goodness_desc}}
               </view>
-              <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_goodness}}" wx:for-item="goodness" wx:key="{{index}}">
-                  <view class="goodTitle1">
-                    <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                    <view class="brightContent">
-                      {{goodness.goodness_desc}}
-                    </view>
-                  </view>
-                </block>
-               
-              </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label>
             </view>
-            <!--市场概况pro_market_genera  -->
-             <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
-              <view class="brightPointBox flex">
-               <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
-                <view class="title star">市场概况</view>
+          </block>
+
+        </view>
+        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
+        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label>
+      </view>
+      <!--市场概况pro_market_genera  -->
+      <view wx:if="{{show_detail}}">
+        <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
+          <view class="brightPointBox flex">
+            <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
+            <view class="title star">市场概况</view>
+          </view>
+          <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
+            <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness" wx:key="{{index}}">
+              <view class="goodTitle1">
+                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
+                <view class="brightContent">
+                  {{goodness.goodness_desc}}
+                </view>
               </view>
-              <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness"  wx:key="{{index}}">
-                  <view class="goodTitle1">
-                    <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                    <view class="brightContent">
-                      {{goodness.goodness_desc}}
-                    </view>
-                  </view>
-                </block>
-               
+            </block>
+
+          </view>
+          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">全部</label>
+          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">收起</label>
+        </view>
+        <!--产品概况pro_service -->
+        <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
+          <view class="brightPointBox flex">
+            <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image>
+            <view class="title star">产品概况</view>
+          </view>
+          <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
+            <block wx:for="{{project.pro_service}}" wx:for-item="goodness" wx:key="{{index}}">
+              <view class="goodTitle1">
+                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
+                <view class="brightContent">
+                  {{goodness.goodness_desc}}
+                </view>
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">收起</label>
-            </view>
-            <!--产品概况pro_service -->
-             <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
-              <view class="brightPointBox flex">
-                <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image>
-                <view class="title star">产品概况</view>
+            </block>
+
+          </view>
+          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">全部</label>
+          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">收起</label>
+        </view>
+        <!--商业模式 pro_business_model -->
+        <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
+          <view class="brightPointBox flex">
+            <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image>
+            <view class="title star">商业模式</view>
+          </view>
+          <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
+            <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness" wx:key="{{index}}">
+              <view class="goodTitle1">
+                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
+                <view class="brightContent">
+                  {{goodness.goodness_desc}}
+                </view>
               </view>
-              <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_service}}" wx:for-item="goodness"  wx:key="{{index}}">
-                  <view class="goodTitle1">
-                    <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                    <view class="brightContent">
-                      {{goodness.goodness_desc}}
-                    </view>
-                  </view>
-                </block>
-               
-              </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">收起</label>
-            </view>
-            <!--商业模式 pro_business_model -->
-             <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
-              <view class="brightPointBox flex">
-                <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image>
-                <view class="title star">商业模式</view>
-              </view>
-              <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness"  wx:key="{{index}}">
-                  <view class="goodTitle1">
-                    <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                    <view class="brightContent">
-                      {{goodness.goodness_desc}}
-                    </view>
-                  </view>
-                </block>
-               
-              </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3==true}}" data-check="{{3}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3== false && textBeyond3==true}}" data-check="{{3}}">收起</label>
-            </view>
-    </view> 
+            </block>
+
+          </view>
+          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3==true}}" data-check="{{3}}">全部</label>
+          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3== false && textBeyond3==true}}" data-check="{{3}}">收起</label>
+        </view>
+      </view>
+    </view>
     <!--三个tab页  -->
-     <include src='/utils/wxml/threeTab.wxml' /> 
+    <include src='/utils/wxml/threeTab.wxml' />
     <!--申请查看未能过-->
     <view class="lockStyle" wx:if="{{show_detail != 1}}">
       <image class="lock" src="/img/img-suo2@2x.png"></image>
