--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -8,7 +8,7 @@
 <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit,currentTab}}'></template>
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:945rpx" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="{{currentTab == 0 ? 'swiper-box-other' : 'swiper-box'}}" duration="300" bindchange="bindChange">
   <!--模态层  -->
   <view class='t-modal' wx:if='{{SearchInit.currentIndex!=5}}' bindtap='modal'></view>
   <swiper-item data-current='0'>
@@ -71,8 +71,6 @@
         </view>
         <template is="investment" data="{{investment_list}}"></template>
       </view>
-
-      <view style="height:100rpx;"></view>
     </scroll-view>
   </swiper-item>
   <!--投资人  -->
@@ -86,6 +84,7 @@
           <template is='cardBottom1' data='{{item,user_id}}'></template>
         </view>
       </block>
+      <view class="high"></view>
     </scroll-view>
     <!--空状态-->
     <image class="empty" src="/img/empty.png" wx:if="{{investorList==''}}"></image>
@@ -101,6 +100,7 @@
           <template is='cardBottom1' data='{{item,user_id}}'></template>
         </view>
       </block>
+      <view class="high"></view>
     </scroll-view>
     <!--空状态-->
     <view wx:if="{{faList==''}}">
@@ -110,6 +110,7 @@
   <!--我的  -->
   <swiper-item data-current='3'>
     <template is='myContacts' data='{{myList,activtyBanner}}'></template>
+
     <!--空状态-->
     <view wx:if="{{empty == 1}}">
       <view class="nullState" wx:if="{{contacts=='' || !contacts}}">
@@ -192,6 +193,7 @@
   <view  class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
 </view>
 </block>
+    <view class="high"></view>
 </scroll-view>
 </template>
 <template name="searchNothing">
